--- a/partials/profil.html
+++ b/partials/profil.html
@@ -36,13 +36,13 @@
 
 				                    <div class="row resultat-table-profil">
 					                    <div class="col-xs-4 col-sm-4 col-md-4">
-					                        <label>{{user.last_name}}</label>
+					                        <label>{{cards.length}}</label>
 				                        </div>
 				                        <div class="col-xs-4 col-sm-4 col-md-4">
-				                        	<label>{{user.last_name}}</label>
+				                        	<label>{{countShared}}</label>
 				                        </div>
 				                        <div class="col-xs-4 col-sm-4 col-md-4">
-				                        	<label>{{user.last_name}}</label>
+				                        	<label>{{countReciprocal}}</label>
 				                        </div>
 				                    </div>
 			                    </div>
