--- a/partials/profil.html
+++ b/partials/profil.html
@@ -93,11 +93,7 @@
 			
 				<form  id="signForm" name="signForm" ng-submit="update()" role="form" novalidate>
 					<legend id="titre">Profil</legend>
-		            <div class="form-group col-xs-12 col-sm-12 col-md-12">
-			            <div class="alert alert-danger" role="alert" ng-if="err.message">
-									{{err.message}}
-			           	</div>
-			        </div>
+		            
 					<div class="form-group col-xs-6 col-sm-6 col-md-6">
 		             	<div class="input-group">
 		                    <span class="input-group-addon ">
@@ -106,7 +102,7 @@
 		                    <input type="text" ng-model="user.last_name" class="form-control champOnly" name="lastname" placeholder="Nom(Obligatoire)" />
 		                </div>
 	            	</div>
-					<div class="form-group col-xs-6 col-sm-6 col-md-6">
+	            	<div class="form-group col-xs-6 col-sm-6 col-md-6">
 		             	<div class="input-group">
 		                    <span class="input-group-addon">
 		                    	<img class="icon-form" src="img/svg/icon-prenom.svg"/>
@@ -114,6 +110,10 @@
 		                    <input type="text" class="form-control champOnly" ng-model="user.first_name" name="firstname" placeholder="Prénom(Obligatoire)" />
 		                </div>
 					</div>
+					<div class="form-group col-xs-12 col-sm-12 col-md-12">
+			            <div ng-if="err.message" style="color: red" align="center">{{err.message}}</div>
+			        </div>
+					
 					<div class="form-group col-xs-6 col-sm-6 col-md-6">
 						<label id="titre">Importer votre avatar</label>
 					</div>	
