--- a/partials/profil.html
+++ b/partials/profil.html
@@ -98,6 +98,11 @@
 									{{err.message}}
 			           	</div>
 			        </div>
+			        <div class="form-group col-xs-12 col-sm-12 col-md-12">
+			            <div class="alert alert-success" role="alert" ng-if="success.message">
+									{{success.message}}
+			           	</div>
+			        </div>
 					<div class="form-group col-xs-6 col-sm-6 col-md-6">
 		             	<div class="input-group">
 		                    <span class="input-group-addon ">
