--- a/partials/login.html
+++ b/partials/login.html
@@ -11,27 +11,29 @@
 	<td class="fond-right">
 		<div class="champInscrit">
 		  	<br><br>
-		    <div class="text">Login via</div> 
+		    <div class="text">Login via</div>
 		    <br>
 			  <div class="social-buttons">
 			  	<a href="#" class="btn btn-tw socialButton">
-			  	<i class="fa fa-facebook"></i> 
+			  	<i class="fa fa-facebook"></i>
 				Facebook</a>
 				<a href="#" class="btn btn-tw socialButton">
-				<i class="fa fa-twitter"></i> 
-				witter</a>
+				<i class="fa fa-twitter"></i>
+				Twitter</a>
 				</div>
 				<br><br>
 				<div class="text">ou</div>
 				<br>
 		        <div class="form-group">
 		           <label class="sr-only" for="exampleInputEmail2">Email</label>
-		           <input ng-model="user.email" type="email" class="form-control champOnly" id="exampleInputEmail2" placeholder="Email address" required>
+		           <input ng-model="user.email" type="email" class="form-control champOnly" id="exampleInputEmail2" placeholder="Adresse mail" required>
 		        </div>
 		        <div class="form-group">
-		           <label class="sr-only" for="exampleInputPassword2">Password</label>
-		           <input type="password" class="form-control champOnly" id="exampleInputPassword2" placeholder="Password" required ng-model="user.password">
-		           <input type="password" ng-show="state.mode=='inscription'" ng-model="password_check" class="form-control champOnly" placeholder="Password" required>
+							<label class="sr-only" for="exampleInputPassword2">Email</label>
+		           <input type="password" class="form-control champOnly" id="exampleInputPassword2" placeholder="Mot de passe" required ng-model="user.password">
+		        </div>
+						<div class="form-group" ng-show="state.mode == 'inscription'">
+		           <input type="password" class="form-control champOnly" id="exampleInputPassword3" ng-model="password_check" required placeholder="Confirmer mot de passe">
 		        </div>
 		        <div ng-if="err.message" style="color: red" align="center">{{err.message}}</div>
 		        <br>
@@ -49,8 +51,8 @@
   </tr>
   </table>
   </div>
-              
-        
+
+
 
 
 	<!-- <h2 style = "margin-top: 120px">Connexion par email</h1>
@@ -99,12 +101,12 @@
 		<button ng-click="state.mode = 'connexion'">Se connecter</button>
 		<br>
 		<button ng-click="state.mode = 'inscription'">S'inscrire</button>
-		
+
 		<br><br>
-		
+
 		<br><br>
 		<div ng-repeat="card in user.cards">
 			<a class="card background" ng-class="card.background = '{{card._sender.template}}'" >
 
-		carte : {{card | json}}</a></div> -->
+		carte : {{card | json}}</a></div>-->
 </section>
