--- a/partials/shop.html
+++ b/partials/shop.html
@@ -1,9 +1,9 @@
 
-<section class ="fondSite" > 
+<section class ="fondSite" >
 
 <!-- boutton modal personnliser carte -->
-   <center><button class="personaliserCarte" data-toggle="modal" data-target="#myModal">Faites personnaliser votre carte &nbsp &nbsp<span class = "glyphicon glyphicon-arrow-right" aria-hidden="true"></span> 
-    </button></center> 
+   <center><button class="personaliserCarte" data-toggle="modal" data-target="#myModal">Faites personnaliser votre carte &nbsp &nbsp<span class = "glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
+    </button></center>
 
 <!-- modal Personnaliser carte -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -14,14 +14,14 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-            <table border="0">  
+            <table border="0">
                 <tr>
                     <td>
                         <p class="p1"><span class="modal-title" id="myModalLabel">
                             Nous créons votre carte personnalisée aux fonctionnalités premium
                         </span> </p>
                         <p class="p2"><span>
-                          Charte graphique, slogan, logo, design, nos graphistes s'occupent d'intégrer votre identité en suiant à la lettre vos recommandations.  
+                          Charte graphique, slogan, logo, design, nos graphistes s'occupent d'intégrer votre identité en suiant à la lettre vos recommandations.
                         </span></p>
                         <p class="p2"><span>
                             Nous associons aux cartes personnalisée des fonctionalités premium adaptées à votre secteur d'activité.
@@ -31,7 +31,7 @@
                         </span></p>
                     </td>
                 </tr>
-               
+
                 <tr>
                     <td>
                      <button class="bouttonContact" ng-show="!textContact" ng-click ="textContact=!textContact" >Contactez-nous</button>
@@ -40,7 +40,7 @@
                     <tr >
                         <td>
                             <input class="textContact" type="text" name="nom" ng-show="textContact" placeholder="Votre nom" ng-model = "textNom">
-                        
+
                              <input class="textContact" type="text" name="prénom" ng-show="textContact" placeholder="Votre prénom" ng-model = "textPrenom">
                         </td>
                     </tr>
@@ -48,7 +48,7 @@
                         <td>
                         <br>
                            <input class="textContact" type="text" name="adresse mail" ng-show="textContact" placeholder="Votre adresse email" ng-model="textEmail">
-                        
+
                            <input class="textContact" type="text" name="numero telephone" ng-show="textContact" placeholder="Votre numero de telephone" ng-model = "textNumero">
                         </td>
                     </tr>
@@ -65,7 +65,7 @@
                             <button class="bouttonContact" ng-show="textContact">Envoyer</button> </a>
                         </td>
                     </tr>
-              
+
                 <tr>
                     <td><br></td>
                 </tr>
@@ -76,7 +76,7 @@
                         <br></p>
                     </td>
                 </tr>
-                
+
                  <tr>
                     <td>
                      <button class="bouttonContact">Achetez l'outil graphique
@@ -85,11 +85,11 @@
                 </tr>
             </table>
           </div>
-       
+
       </div>
     </div>
 <!-- fin modal Personnaliser carte -->
- 
+
         <div class="bandSelect" id="navbar">
             <ul class="nav navbar-nav navbar-left">
                 <li>
@@ -100,27 +100,27 @@
                 </li>
                 <li>
                     <a class="ajouterCarte" data-toggle="modal" data-target="#achatCarte" data-toggle="dropdown" role="button" ng-switch = "textAjoute()" ng-show="caddieFonds.length > 0" ng-click="calculPrix()">
-                        <div ng-switch-when = false>Ajouter cette carte</div> 
+                        <div ng-switch-when = false>Ajouter cette carte</div>
                         <div ng-switch-when = true> Ajouter ces &nbsp{{caddieFonds.length}}&nbsp cartes</div>
                     </a>
                 </li>
             </ul>
         </div>
-    <div class ="shop">     
-        <div class="col-sm-1 glob" id="slider-thumbs"> 
-            <ul class="hide-bullets" > 
-                <li class="col-sm-3" ng-repeat = 'template in listCards'> 
-                    <a class="thumbnail card {{template}}" id="carousel-selector-{{template}}" data-toggle="modal" data-target="#openFond" ng-click="setCurrentTemplate(template)">
+    <div class ="shop">
+        <div class="col-sm-1 glob" id="slider-thumbs">
+            <ul class="hide-bullets" >
+                <li class="col-sm-3" ng-repeat = 'template in listCards | filter:is_not_owned()'>
+                    <a class="thumbnail card {{template}}" id="carousel-selector-{{template}}" data-toggle="modal" data-target="#openFond" ng-click="setCurrentTemplate(template)" ng-if="!is_owned(template)">
                         <img class = "imgAvatar" src="{{user.avatar}}" alt="imgAvatar">
                         <div ng-switch = "isAdded(template)" ng-click = "ajouteFond(template)">
-                            <img  ng-switch-when=false class="plusOkIcon" src="img/plus.jpg" alt="plus">   
-                            <img ng-switch-when=true class="plusOkIcon" src="img/ok.jpg" alt="ok"> 
+                            <img  ng-switch-when=false class="plusOkIcon" src="img/plus.jpg" alt="plus">
+                            <img ng-switch-when=true class="plusOkIcon" src="img/ok.jpg" alt="ok">
                         </div>
-                    </a> 
-                </li> 
-            </ul> 
-        </div>   
-    </div> 
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 <!-- modal ouvrir un fond de carte -->
     <div class="modal fade" id="openFond" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modalOpen" role="document">
@@ -136,7 +136,7 @@
                     <div class="modalAjoute" data-toggle="dropdown" ng-switch = "isAdded(currentTemplate)" ng-click = "ajouteFond(currentTemplate)">
                         <button class = "f" ng-switch-when = false>Ajouter cette carte</button>
                         <button class = "t" ng-switch-when = true> Retirer cette carte</button>
-                    </div> 
+                    </div>
                     </center>
             </div>
         </div>
@@ -147,34 +147,34 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="close_buy_modal()"><span aria-hidden="true">&times;</span></button>
                     <center>
                         <p class="achatTitle">Achat de cartes premium</p>
                         <div>
-                        <p class="achatCarte" ng-show="achat"> Vous avez choisit &nbsp{{caddieFonds.length}}&nbsp carte(s), vous avez &nbsp {{user.credits}} &nbsp crédit(s)
+                        <p class="achatCarte" ng-show="achat"> Vous avez choisi &nbsp{{caddieFonds.length}}&nbsp carte(s), vous avez &nbsp {{user.credits}} &nbsp crédit(s)
                         </p>
-                        <p class="achatCarte" ng-show="!achat"> Achat effectué, vous restez &nbsp {{user.credits}} &nbsp crédit(s)
+                        <p class="achatCarte" ng-show="!achat"> Achat effectué, il vous vous reste &nbsp {{user.credits}} &nbsp crédit(s)
                         </p>
                         </div>
 
-                        <h5 style="color:white"> * 1 credit = 1 carte </h5>
+                        <h5 style="color:white"> * 1 crédit = 1 carte </h5>
                         <p>
 
                         <button class="achatBouton" ng-click="buy_cards()"> Achetez avec vos crédits</button>
-                        </p> 
-                        <h5 style="color:red">{{err.message}}</h5> 
+                        </p>
+                        <h5 style="color:red"></h5>
 
-                        <p class="achatCarte" ng-show="achatCredits"> Vous avez choisit &nbsp{{caddieFonds.length}} carte(s) =  &nbsp{{caddieFonds.length}} credit(s) &nbsp &nbsp &nbsp 
+                        <p class="achatCarte" ng-show="achatCredits"> Vous avez choisi &nbsp{{caddieFonds.length}} carte(s) =  &nbsp{{caddieFonds.length}} crédit(s) &nbsp &nbsp &nbsp
                         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  {{prix | number:2}} €
                         </p>
                         <p class="achatCarte" ng-show="!achatCredits"> Achat effectué</p>
                          <h5 style="color:white"> * 1.99€/carte, -10% pour 2 à 5 cartes, -20% dès 6 cartes</h5>
 
-                        <!-- <h5 style="color:red">{{err.message}}</h5> -->
+                        <h5 style="color:red">{{err.message}}</h5>
 
-                        <button class="achatBouton" ng-click="orderAchatCredit()">Achetez vos crédits</button>
+                        <button class="achatBouton" ng-click="orderAchatCredit()">Achetez des crédits</button>
                         <p class="achatPied">Ou ajoutez &nbsp <span class="resteCarte">{{50-countCardShared}}</span>&nbsp contacts pour bénéficier d'un fond de carte gratuit</p>
-                        
+
                      </center>
             </div>
         </div>
